fix over scroll bounce on safari

--- a/src/scss/_body.scss
+++ b/src/scss/_body.scss
@@ -19,6 +19,7 @@ body {
     background: rgb(247, 241, 217);
     display: flex;
     flex-direction: row;
+    overscroll-behavior-y: contain;
 }
 
 #app-container {
